@@ -94,6 +94,7 @@ Date: 2024-08-09
     - Lowered the cost of Assembler 3's.
     - Rebalanced module tiers 1-2 technology cost to be closer in line with tier 3's.
     - Revamped shotguns slightly to make them more useful and predictable?
+    - Buffed Chromium based stainless steel to give 6 plates instead of 5.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
